<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:id="@+id/tv_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_main_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/settings"
                android:theme="@style/TitleButton"
                app:srcCompat="@drawable/ic_toolbar_settingsblack" />
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_main_bill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/bill"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_main_bill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/billHint"
                    android:inputType="number|numberDecimal"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_main_split"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/split"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_main_split"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/splitHint"
                    android:inputType="number"
                    android:text="@string/splitHint"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_main_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tipPercentage"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_main_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/tipPercentageHint"
                    android:inputType="number"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_main_suggest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/suggest"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_main_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text="@string/rate"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/rb_main_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_main_clear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/clear"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:theme="@style/NormalButton" />

                    <Button
                        android:id="@+id/btn_main_calculate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/calculate"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:theme="@style/NormalButton" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>




</android.support.constraint.ConstraintLayout>