<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageButton
                android:id="@+id/btn_settings_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Toolbar"
                android:contentDescription="@string/back"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/tv_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/titleSettings"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_settings_tipPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/defaultTipPercentage"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_settings_tipPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/tipPercentageHint"
                    android:inputType="number"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_settings_taxPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/defaultTaxPercentage"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_settings_taxPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/taxPercentageHint"
                    android:inputType="number"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_settings_tipPercentageExplain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/explain" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/tv_settings_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/defaultCurrency"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgroup_settings_currency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <RadioButton
                        android:id="@+id/rbtn_settings_dollar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/symbolDollar"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rbtn_settings_euro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/symbolEuro"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rbtn_settings_pound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/symbolPound"
                        android:textSize="18sp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <!--
                    <Button
                        android:id="@+id/btn_settings_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorBackTV"
                        android:text="@string/cancel"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    -->

                    <Button
                        android:id="@+id/btn_settings_save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@color/Button"
                        android:text="@string/save"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>