<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageButton
                android:id="@+id/btn_summary_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Toolbar"
                android:contentDescription="@string/back"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/tv_summary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/titleSummary"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_summary_bill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_summary_bill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/billAmount"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_summary_billNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/emptyAmount"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_summary_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_summary_tip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/tip"
                        android:textAllCaps="false"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_summary_tipNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/emptyAmount"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_summary_tax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_summary_tax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/taxPercentage"
                        android:textAllCaps="false"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_summary_taxNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/emptyAmount"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_summary_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/total"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_summary_totalNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/Button"
                    android:gravity="center"
                    android:text="@string/emptyAmount"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp" />

                <LinearLayout
                    android:id="@+id/ll_summary_billSplit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_summary_billSplit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/billSplit"
                        android:textAllCaps="false"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_summary_billSplitNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/emptyAmount"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_summary_tipSplit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_summary_tipSplit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/tipSplit"
                        android:textAllCaps="false"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_summary_tipSplitNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/emptyAmount"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_summary_taxSplit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_summary_taxSplit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/taxPercentage"
                        android:textAllCaps="false"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_summary_taxSplitNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/emptyAmount"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_summary_totalSplit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/totalSplit"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_summary_totalSplitNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/Button"
                    android:gravity="center"
                    android:text="@string/emptyAmount"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="30sp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>